fix visual bug on mobile with events

--- a/css/events.css
+++ b/css/events.css
@@ -1,3 +1,9 @@
 .event {
     width: 50%;
 }
+
+@media (max-width: 600px) {
+    .event {
+        width: calc(100% - 40px)
+    }
+}
